# blog_app

./: .gitignore  GitReadMe.md  ReadMe.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  auth.py  database-schema.sql  database.py  main.py  model.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CommentForm.jsx  Header.jsx  HelloBackend.jsx  NewPostForm.jsx
frontend/src/pages/: featuresPage.jsx  homePage.jsx  landingPage.jsx  loginPage.jsx  postsPage.jsx  signUpPage.jsx
frontend/src/services/: api.jsx
